# submodule-template

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/config/: customize.rs  mod.rs
src/customize/: mod.rs
src/thread/: mod.rs
