[package]
name = "submodule-template"
version = "0.1.0"
edition = "2021"

[dependencies]
nihility-common = { git = "https://github.com/nihilityer/nihility-common", tag = "v0.3.13" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
anyhow = "1.0"

[profile.release]
lto = true
opt-level = 's'
panic = "unwind"
